fixing goofy line-wrapping headers in the right rail

--- a/assets/sass/components/_body.scss
+++ b/assets/sass/components/_body.scss
@@ -214,7 +214,7 @@ html body {
 
 				h3 {
 					color: #000000;
-					height: 32px;
+					/*height: 32px;*/
 					font-size: 19px;
 					padding: 0px 10px;
 					text-transform: uppercase;
