--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -511,7 +511,7 @@ html body #main #secondary.widget-area {
 /* line 215, ../sass/components/_body.scss */
 html body #main #secondary aside h3 {
   color: #000000;
-  height: 32px;
+  /*height: 32px;*/
   font-size: 19px;
   padding: 0px 10px;
   text-transform: uppercase;
